[project]
name = "agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "google-adk>=2.1.0",
    "google-genai>=2.8.0",
    "litellm>=1.86.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
