[project]
name = "agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "google-adk>=2.2.0",
    "google-genai>=1.74.0",
    "litellm>=1.89.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
